Add Flyway configuration and database schema management
- Implement Dockerfile for Flyway with PostgreSQL client installation
- Create docker-compose file for Flyway service with migration and schema dump
- Update .gitignore to exclude schema dumps except for the latest one
- Add initial anomaly patterns SQL seed data

--- a/abm-anomaly-ml-first/.gitignore
+++ b/abm-anomaly-ml-first/.gitignore
@@ -53,3 +53,8 @@ services/dashboard/.env.local
 *.h5
 *.pth
 *.bin
+
+# Ignore all schema dumps
+/data/db/schema/*
+# Except the latest one
+!/data/db/schema/updated_schema.sql
