--- a/abm-anomaly-ml-first/data/flyway/Dockerfile-Flyway
+++ b/abm-anomaly-ml-first/data/flyway/Dockerfile-Flyway
@@ -10,3 +10,7 @@ RUN apt-get update && \
     apt-get remove -y postgresql-client-12 && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
+
+# Add wait-for-postgres script
+COPY wait-for-postgres.sh /flyway/wait-for-postgres.sh
+RUN chmod +x /flyway/wait-for-postgres.sh
