--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Mark repo as safe for Git
+        run: git config --global --add safe.directory /home/***/Capstone-Project
       - name: Connect to DigitalOcean and Deploy
         uses: appleboy/ssh-action@master
         with:
