Update deploy.yml to reflect proj path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
             git reset --hard
             git pull origin main
 
+            cd /home/${{ secrets.DROPLET_USER }}/Capstone-Project/abm-anomaly-ml-first
             echo "➡ Using Docker Compose with Flyway for migrations..."
             docker-compose -f docker-compose.yml -f docker-compose-flyway.yml --env-file .env.production pull
             docker-compose -f docker-compose.yml -f docker-compose-flyway.yml --env-file .env.production down
