--- a/abm-anomaly-ml-first/nginx/conf.d/default.conf
+++ b/abm-anomaly-ml-first/nginx/conf.d/default.conf
@@ -15,6 +15,7 @@ server {
 
 # HTTPS reverse proxy
 server {
+    """
     listen 443 ssl http2;
     server_name 64-227-16-180.sslip.io;
 
@@ -25,7 +26,7 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 1d;
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
+    ssl_prefer_server_ciphers off; """
 
     # ACME validation over HTTPS too
     location ^~ /.well-known/acme-challenge/ {
