--- a/abm-anomaly-ml-first/docker-compose.yml
+++ b/abm-anomaly-ml-first/docker-compose.yml
@@ -61,8 +61,8 @@ services:
   dashboard:
     build: ./services/dashboard
     container_name: abm-ml-dashboard
-    ports:
-      - "3000:3000"
+    #ports:
+    #  - "3000:3000"
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
     depends_on:
