Add .env file support for dashboard service and update API URL environment variable

--- a/abm-anomaly-ml-first/services/dashboard/Dockerfile
+++ b/abm-anomaly-ml-first/services/dashboard/Dockerfile
@@ -11,6 +11,9 @@ COPY . .
 # Ensure output is relative to /dashboard path for Nginx routing
 ENV PUBLIC_URL=/dashboard
 
+#ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+
 RUN npm run build
 
 # Stage 2: Only export built static files
