--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,21 +16,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'npm'
 
       - name: Cache npm
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('services/dashboard/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
       - name: Install Dashboard Dependencies (CI mode)
-        working-directory: ./services/dashboard
+        working-directory: ./abm-anomaly-ml-first/services/dashboard
         run: npm ci
 
       - name: "Optional: Build Dashboard Locally"
-        working-directory: ./services/dashboard
+        working-directory: ./abm-anomaly-ml-first/services/dashboard
         run: npm run build
 
       - name: Connect to DigitalOcean and Deploy
