--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
 
       - name: Cache npm
         uses: actions/cache@v4
@@ -30,7 +29,7 @@ jobs:
         working-directory: ./abm-anomaly-ml-first/services/dashboard
         run: npm ci
 
-      - name: "Optional: Build Dashboard Locally"
+      - name: Build Dashboard Locally
         working-directory: ./abm-anomaly-ml-first/services/dashboard
         run: npm run build
 
@@ -48,9 +47,9 @@ jobs:
             git reset --hard
             git pull origin main
 
+            echo "➡ Starting deployment..."
             cd /home/${{ secrets.DROPLET_USER }}/Capstone-Project/abm-anomaly-ml-first
 
-            echo "➡ Using Docker Compose with Flyway for migrations..."
             docker compose -f docker-compose.yml -f docker-compose-flyway.yml --env-file .env.production pull
             docker compose -f docker-compose.yml -f docker-compose-flyway.yml --env-file .env.production down
             docker compose -f docker-compose.yml -f docker-compose-flyway.yml --env-file .env.production up -d --build
