--- a/abm-anomaly-ml-first/services/dashboard/nginx.conf
+++ b/abm-anomaly-ml-first/services/dashboard/nginx.conf
@@ -1,8 +1,13 @@
 server {
-  listen 80;
-  root /usr/share/nginx/html;
+    listen 80;
 
-  location / {
-    try_files $uri /index.html;
-  }
+    location /dashboard/ {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /dashboard/index.html;
+    }
+
+    location / {
+        return 301 /dashboard/;
+    }
 }
