--- a/abm-anomaly-ml-first/services/dashboard/package.json
+++ b/abm-anomaly-ml-first/services/dashboard/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "homepage": "/dashboard/",
   "dependencies": {
+    "axios": "^1.4.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.4.0",
     "recharts": "^2.7.2",
-    "lucide-react": "^0.263.1",
     "serve": "^14.2.0"
   },
   "scripts": {
