--- a/abm-anomaly-ml-first/docker-compose.yml
+++ b/abm-anomaly-ml-first/docker-compose.yml
@@ -70,7 +70,7 @@ services:
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
     env_file:
-    - .env
+    - .env.production
     depends_on:
       - api
     restart: unless-stopped
