--- a/abm-anomaly-ml-first/services/dashboard/package.json
+++ b/abm-anomaly-ml-first/services/dashboard/package.json
@@ -8,14 +8,14 @@
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.7.0",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.7.2",
     "serve": "^14.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI='' react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
