--- a/abm-anomaly-ml-first/services/dashboard/nginx.conf
+++ b/abm-anomaly-ml-first/services/dashboard/nginx.conf
@@ -1,13 +1,11 @@
 server {
     listen 80;
+    server_name localhost;
 
-    location /dashboard/ {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /dashboard/index.html;
-    }
+    root /usr/share/nginx/html;
+    index index.html;
 
     location / {
-        return 301 /dashboard/;
+        try_files $uri /index.html;
     }
 }
