--- a/abm-anomaly-ml-first/nginx/conf.d/default.conf
+++ b/abm-anomaly-ml-first/nginx/conf.d/default.conf
@@ -47,6 +47,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    location /api/ {
+    proxy_pass http://api:8000/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+}
+
     # Optional: simple health page at /
     location = / {
         root /usr/share/nginx/html;
