Refactor: Update environment variables and Nginx configuration for improved API and dashboard routing

--- a/abm-anomaly-ml-first/.env
+++ b/abm-anomaly-ml-first/.env
@@ -22,5 +22,4 @@ API_HOST=0.0.0.0
 API_PORT=8000
 
 # Dashboard Configuration
-REACT_APP_API_URL=https://64-227-16-180.sslip.io
-#REACT_APP_API_URL=http://localhost:8000
+REACT_APP_API_URL=http://64.227.16.180:80
