--- a/abm-anomaly-ml-first/services/dashboard/default.conf
+++ b/abm-anomaly-ml-first/services/dashboard/default.conf
@@ -1,37 +1,24 @@
-# Redirect HTTP → HTTPS
-server {
-    listen 80;
-    server_name 64-227-16-180.sslip.io;
-
-    # ACME challenge location (Certbot webroot)
-    location ^~ /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
 
 # HTTPS reverse proxy
 server {
-    
-    listen 443 ssl http2;
-    server_name 64-227-16-180.sslip.io;
+    listen 80;
+    server_name 64.227.16.180;
+    #listen 443 ssl http2;
+    #server_name 64-227-16-180.sslip.io;
 
-    ssl_certificate     /etc/letsencrypt/live/64-227-16-180.sslip.io/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/64-227-16-180.sslip.io/privkey.pem;
+    #ssl_certificate     /etc/letsencrypt/live/64-227-16-180.sslip.io/fullchain.pem;
+    #ssl_certificate_key /etc/letsencrypt/live/64-227-16-180.sslip.io/privkey.pem;
 
     # (optional) strong settings
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off; 
+    #ssl_session_cache shared:SSL:10m;
+    #ssl_session_timeout 1d;
+    #ssl_protocols TLSv1.2 TLSv1.3;
+    #ssl_prefer_server_ciphers off; 
 
     # ACME validation over HTTPS too
-    location ^~ /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    #location ^~ /.well-known/acme-challenge/ {
+    #    root /var/www/certbot;
+    #}
 
     # API (FastAPI)
     location /api/ {
