--- a/abm-anomaly-ml-first/docker-compose.yml
+++ b/abm-anomaly-ml-first/docker-compose.yml
@@ -72,8 +72,8 @@ services:
       args:
         REACT_APP_API_URL: ${REACT_APP_API_URL}
     container_name: abm-ml-dashboard
-    #ports:
-    #  - "3000:3000"
+    ports:
+      - "80:80"
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
     env_file:
