--- a/abm-anomaly-ml-first/nginx/conf.d/default.conf
+++ b/abm-anomaly-ml-first/nginx/conf.d/default.conf
@@ -1,9 +1,10 @@
 server {
     listen 80;
-    server_name 64.227.16.180;
+    server_name localhost;
 
-    location / {
-        proxy_pass http://abm-ml-dashboard:80;
+    location /dashboard/ {
+        proxy_pass http://dashboard/;  # This uses Docker's internal DNS
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
