--- a/abm-anomaly-ml-first/nginx/conf.d/default.conf
+++ b/abm-anomaly-ml-first/nginx/conf.d/default.conf
@@ -1,10 +1,17 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     location /dashboard/ {
-        proxy_pass http://dashboard/;  # This uses Docker's internal DNS
-        proxy_http_version 1.1;
+        proxy_pass http://abm-ml-dashboard/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api/ {
+        proxy_pass http://abm-ml-api:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
