--- a/abm-anomaly-ml-first/services/dashboard/default.conf
+++ b/abm-anomaly-ml-first/services/dashboard/default.conf
@@ -1,48 +1,29 @@
-
-# HTTPS reverse proxy
 server {
     listen 80;
-    server_name 64.227.16.180;
-    #listen 443 ssl http2;
-    #server_name 64-227-16-180.sslip.io;
+    server_name localhost;
 
-    #ssl_certificate     /etc/letsencrypt/live/64-227-16-180.sslip.io/fullchain.pem;
-    #ssl_certificate_key /etc/letsencrypt/live/64-227-16-180.sslip.io/privkey.pem;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
 
-    # (optional) strong settings
-    #ssl_session_cache shared:SSL:10m;
-    #ssl_session_timeout 1d;
-    #ssl_protocols TLSv1.2 TLSv1.3;
-    #ssl_prefer_server_ciphers off; 
-
-    # ACME validation over HTTPS too
-    #location ^~ /.well-known/acme-challenge/ {
-    #    root /var/www/certbot;
-    #}
-
-    # API (FastAPI)
-    location /api/ {
-        proxy_pass http://api:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    # Dashboard (React)
+    # Serve the React dashboard
     location /dashboard/ {
-        proxy_pass http://dashboard:80/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        try_files $uri $uri/ /dashboard/index.html;
     }
 
+    # Reverse proxy API requests
     location /api/ {
-    proxy_pass http://api:8000/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-}
+        proxy_pass http://abm-ml-api:8000/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-    # Optional: simple health page at /
-    location = / {
+    # Serve static assets (optional optimization)
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot)$ {
         root /usr/share/nginx/html;
-        try_files /index.html =404;
+        access_log off;
+        log_not_found off;
+        expires max;
     }
 }
