--- a/abm-anomaly-ml-first/services/dashboard/Dockerfile
+++ b/abm-anomaly-ml-first/services/dashboard/Dockerfile
@@ -22,6 +22,7 @@ FROM nginx:1.25-alpine
 
 # Remove default config and copy your custom config
 RUN rm /etc/nginx/conf.d/default.conf
+COPY ./dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY default.conf /etc/nginx/conf.d/default.conf
 
