--- a/abm-anomaly-ml-first/services/dashboard/default.conf
+++ b/abm-anomaly-ml-first/services/dashboard/default.conf
@@ -2,18 +2,25 @@ server {
     listen 80;
     server_name _;
 
+    # Dashboard frontend served from /dashboard
     location /dashboard/ {
-        proxy_pass http://dashboard/;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /dashboard/index.html;
+    }
+
+    # Proxy API requests to backend FastAPI app
+    location /api/ {
+        proxy_pass http://abm-ml-api:8000/;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api/ {
-        proxy_pass http://abm-ml-api:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # Optional: serve static files directly
+    location /static/ {
+        root /usr/share/nginx/html;
     }
 }
