--- a/abm-anomaly-ml-first/services/dashboard/default.conf
+++ b/abm-anomaly-ml-first/services/dashboard/default.conf
@@ -1,26 +1,28 @@
-server {
-    listen 80;
-    server_name _;
+# Stage 1 - Build React app
+FROM node:18 AS builder
 
-    # Dashboard frontend served from /dashboard
-    location /dashboard/ {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /dashboard/index.html;
-    }
+WORKDIR /app
 
-    # Proxy API requests to backend FastAPI app
-    location /api/ {
-        proxy_pass http://abm-ml-api:8000/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+# Accept runtime API URL
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
 
-    # Optional: serve static files directly
-    location /static/ {
-        root /usr/share/nginx/html;
-    }
-}
+COPY package.json package-lock.json ./
+RUN npm ci
+
+COPY . .
+RUN npm run build
+
+# Stage 2 - Serve with Nginx
+FROM nginx:1.25-alpine
+
+# Clean default config and add custom one
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY default.conf /etc/nginx/conf.d/default.conf
+
+# ✅ Copy built files from the builder stage
+COPY --from=builder /app/build /usr/share/nginx/html
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
