Refactor: Update Nginx configuration to correct dashboard index file path and adjust homepage in package.json

--- a/abm-anomaly-ml-first/services/dashboard/default.conf
+++ b/abm-anomaly-ml-first/services/dashboard/default.conf
@@ -6,7 +6,7 @@ server {
     location /dashboard/ {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri $uri/ /dashboard/index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     # Proxy API requests to backend FastAPI app
