--- a/abm-anomaly-ml-first/services/dashboard/package.json
+++ b/abm-anomaly-ml-first/services/dashboard/package.json
@@ -2,7 +2,7 @@
   "name": "abm-ml-anomaly-dashboard",
   "version": "1.0.0",
   "private": true,
-  "homepage": "/dashboard/",
+  "homepage": "/dashboard",
   "dependencies": {
     "axios": "^1.4.0",
     "lucide-react": "^0.263.1",
