Refactor: Enhance Nginx configuration for dashboard by adding sub_filter directives and removing commented lines

--- a/abm-anomaly-ml-first/services/dashboard/default.conf
+++ b/abm-anomaly-ml-first/services/dashboard/default.conf
@@ -2,14 +2,15 @@ server {
     listen 80;
     server_name _;
 
-    # Dashboard frontend served from /dashboard
     location /dashboard/ {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
+        sub_filter 'href="/' 'href="/dashboard/';
+        sub_filter 'src="/' 'src="/dashboard/';
+        sub_filter_once off;
     }
 
-    # Proxy API requests to backend FastAPI app
     location /api/ {
         proxy_pass http://abm-ml-api:8000/;
         proxy_http_version 1.1;
@@ -19,7 +20,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Optional: serve static files directly
     location /static/ {
         root /usr/share/nginx/html;
     }
