Refactor: Simplify Nginx configuration by removing the dashboard location block and adjusting try_files directive

--- a/abm-anomaly-ml-first/services/dashboard/default.conf
+++ b/abm-anomaly-ml-first/services/dashboard/default.conf
@@ -2,13 +2,10 @@ server {
     listen 80;
     server_name _;
 
-    location /dashboard/ {
+    location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri $uri/ /index.html;
-        sub_filter 'href="/' 'href="/dashboard/';
-        sub_filter 'src="/' 'src="/dashboard/';
-        sub_filter_once off;
+        try_files $uri /index.html;
     }
 
     location /api/ {
