--- a/abm-anomaly-ml-first/docker-compose.yml
+++ b/abm-anomaly-ml-first/docker-compose.yml
@@ -90,6 +90,8 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: abm-ml-postgres
+    env_file:
+    - .env
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
