--- a/abm-anomaly-ml-first/.gitignore
+++ b/abm-anomaly-ml-first/.gitignore
@@ -45,7 +45,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # React
-services/dashboard/build/
+#services/dashboard/build/
 services/dashboard/.env.local
 
 # Models
