--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,29 +27,39 @@ jobs:
             echo "➡ Pulling latest code..."
             cd /home/${{ secrets.DROPLET_USER }}/Capstone-Project
 
-            # ⚠ Clean up existing dashboard build artifacts (avoids permission errors)
-            echo "⚠ Removing old dashboard build folder (if any)..."
+            echo "⚠ Removing dashboard build if present..."
             rm -rf abm-anomaly-ml-first/services/dashboard/build
 
-            # Remove .env.production if exists
             if [ -f abm-anomaly-ml-first/.env.production ]; then
               echo "⚠ Removing existing .env.production to avoid git conflict..."
               rm abm-anomaly-ml-first/.env.production
             fi
 
             git reset --hard
-            git clean -fd
             git pull origin main
 
-            echo "➡ Creating .env.production file..."
+            echo "➡ Creating fresh .env.production file..."
             cat <<EOF > abm-anomaly-ml-first/.env.production
             POSTGRES_USER=abm_user
             POSTGRES_PASSWORD=secure_ml_password123
             POSTGRES_DB=abm_ml_db
+            POSTGRES_HOST=postgres
+            REDIS_HOST=redis
+            REDIS_PASSWORD=redis_ml_password123
+            JWT_SECRET=your_jwt_secret_key_ml_first
+            ANOMALY_THRESHOLD=0.7
+            MODEL_UPDATE_INTERVAL=3600
+            LOG_LEVEL=INFO
+            BERT_MODEL=bert-base-uncased
+            API_HOST=0.0.0.0
+            API_PORT=8000
             REACT_APP_API_URL=http://64.227.16.180:3000/api/
             EOF
 
-            echo "➡ Starting Docker Compose build and deployment..."
+            echo "➡ Setting ownership (fix any permission issues)..."
+            sudo chown -R $USER:$USER /home/${{ secrets.DROPLET_USER }}/Capstone-Project
+
+            echo "➡ Running Docker Compose..."
             cd abm-anomaly-ml-first
 
             docker compose -f docker-compose.yml -f docker-compose-flyway.yml --env-file .env.production down
