--- a/abm-anomaly-ml-first/docker-compose.yml
+++ b/abm-anomaly-ml-first/docker-compose.yml
@@ -76,7 +76,7 @@ services:
       - "3000:80"
     volumes:
       - ./services/dashboard/default.conf:/etc/nginx/conf.d/default.conf
-      - ./services/dashboard/build:/usr/share/nginx/html:ro
+     # - ./services/dashboard/build:/usr/share/nginx/html:ro
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
     env_file:
