Refactor: Clean up Dockerfile by removing unnecessary comments and updating npm to yarn for dependency installation

--- a/abm-anomaly-ml-first/services/dashboard/Dockerfile
+++ b/abm-anomaly-ml-first/services/dashboard/Dockerfile
@@ -1,26 +1,23 @@
-# Stage 1: Build React App
+# services/dashboard/Dockerfile
 FROM node:18-alpine as build-stage
 
 WORKDIR /app
 
-# Copy package files and install deps
-COPY package*.json ./
-RUN npm install
+# Install deps
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
 
-# Copy source code and build the app
+# Copy source
 COPY . .
+
+# Inject REACT_APP_API_URL from build arg and build the app
 ARG REACT_APP_API_URL
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
-RUN npm run build
+RUN echo "Using API: $REACT_APP_API_URL" && yarn build
 
-# Stage 2: Serve with Nginx
+# ------------------------
+
 FROM nginx:1.25-alpine
 
-# Remove default nginx index page
-RUN rm -rf /usr/share/nginx/html/*
-
-# Copy built React app
 COPY --from=build-stage /app/build /usr/share/nginx/html
-
-# Replace Nginx config
 COPY default.conf /etc/nginx/conf.d/default.conf
