Update Docker file to correct RUN echo Using API:  && npm run build

--- a/abm-anomaly-ml-first/services/dashboard/Dockerfile
+++ b/abm-anomaly-ml-first/services/dashboard/Dockerfile
@@ -13,7 +13,7 @@ COPY . .
 # Inject REACT_APP_API_URL from build arg and build the app
 ARG REACT_APP_API_URL
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
-RUN echo "Using API: $REACT_APP_API_URL" && npm build
+RUN echo "Using API: $REACT_APP_API_URL" && npm run build
 
 # ------------------------
 
