attempt to proxy :80/api to :3000/api

--- a/abm-anomaly-ml-first/.env
+++ b/abm-anomaly-ml-first/.env
@@ -22,5 +22,4 @@ API_HOST=0.0.0.0
 API_PORT=8000
 
 # Dashboard Configuration
-#REACT_APP_API_URL=http://64.227.16.180
-REACT_APP_API_URL=/
+REACT_APP_API_URL=http://64.227.16.180
