--- a/abm-anomaly-ml-first/.env.production
+++ b/abm-anomaly-ml-first/.env.production
@@ -23,5 +23,4 @@ API_PORT=8000
 
 # Dashboard Configuration
 #REACT_APP_API_URL=https://64-227-16-180.sslip.io
-#REACT_APP_API_URL=http://64.227.16.180
-REACT_APP_API_URL=/
+REACT_APP_API_URL=http://64.227.16.180
