Implement flexible deployment architecture with updated scripts and configurations

--- a/abm-anomaly-ml-first/.env.production
+++ b/abm-anomaly-ml-first/.env.production
@@ -1,26 +1,49 @@
+# Production Environment Configuration
+# Use this for DigitalOcean and other production deployments
+
+# Application Environment
+NODE_ENV=production
+ENVIRONMENT=production
+
 # Database Configuration
 POSTGRES_DB=abm_ml_db
 POSTGRES_USER=abm_user
 POSTGRES_PASSWORD=secure_ml_password123
 POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 
 # Redis Configuration
 REDIS_HOST=redis
+REDIS_PORT=6379
 REDIS_PASSWORD=redis_ml_password123
-
-# Security
-JWT_SECRET=your_jwt_secret_key_ml_first
-
-# ML Configuration
-ANOMALY_THRESHOLD=0.7
-MODEL_UPDATE_INTERVAL=3600
-LOG_LEVEL=INFO
-BERT_MODEL=bert-base-uncased
 
 # API Configuration
 API_HOST=0.0.0.0
 API_PORT=8000
 
 # Dashboard Configuration
+DASHBOARD_PORT=3000
 #REACT_APP_API_URL=https://64-227-16-180.sslip.io
 REACT_APP_API_URL=http://64.227.16.180
+
+# Nginx Configuration
+NGINX_PORT=80
+
+# ML Configuration
+ML_MODEL_PATH=/app/models
+ML_RETRAIN_INTERVAL=24
+ANOMALY_THRESHOLD=0.7
+MODEL_UPDATE_INTERVAL=3600
+BERT_MODEL=bert-base-uncased
+
+# Monitoring
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3001
+
+# Security
+JWT_SECRET=your_jwt_secret_key_ml_first
+SECRET_KEY=${SECRET_KEY}
+
+# Production specific
+DEBUG=false
+LOG_LEVEL=INFO
