--- a/abm-anomaly-ml-first/docker-compose.yml
+++ b/abm-anomaly-ml-first/docker-compose.yml
@@ -71,17 +71,12 @@ services:
       context: ./services/dashboard
       dockerfile: Dockerfile
       args:
-        REACT_APP_API_URL: ${REACT_APP_API_URL}
+        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost}
     container_name: abm-ml-dashboard
-    ports:
-      - "3000:80"
-    volumes:
-      - ./services/dashboard/default.conf:/etc/nginx/conf.d/default.conf
-     # - ./services/dashboard/build:/usr/share/nginx/html:ro
     environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL}
-    env_file:
-    - .env.production
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost}
+    volumes:
+      - ./services/dashboard/build:/usr/share/nginx/html:ro
     depends_on:
       - api
     restart: unless-stopped
@@ -178,9 +173,9 @@ services:
       - api
       - dashboard
     volumes:
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
-      - "80:80"
+      - "${NGINX_PORT:-80}:80"
       - "443:443"
     networks:
       - abm-network
