--- a/abm-anomaly-ml-first/services/dashboard/Dockerfile
+++ b/abm-anomaly-ml-first/services/dashboard/Dockerfile
@@ -21,3 +21,6 @@ FROM nginx:1.25-alpine
 
 COPY --from=build-stage /app/build /usr/share/nginx/html
 COPY default.conf /etc/nginx/conf.d/default.conf
+
+# Expose the port that nginx runs on inside the container
+EXPOSE 80
