--- a/abm-anomaly-ml-first/services/dashboard/default.conf
+++ b/abm-anomaly-ml-first/services/dashboard/default.conf
@@ -9,8 +9,7 @@ server {
     }
 
     location /api/ {
-        rewrite ^/api(/.*)$ $1 break;
-        proxy_pass http://abm-ml-api:8000/;
+        proxy_pass http://abm-ml-api:8000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
