--- a/abm-anomaly-ml-first/nginx/default.conf
+++ b/abm-anomaly-ml-first/nginx/default.conf
@@ -13,14 +13,14 @@ server {
 
     # API routes
     location /api/ {
-        proxy_pass http://api/;
+        proxy_pass http://api/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_timeout 300s;
         proxy_read_timeout 300s;
         proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
     }
 
     # Dashboard routes (default)
